# ukiapi

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  STATE_OF_THE_ART.md  TODO.md  bench  build_router.rs  cliff.toml  fix_routing_v5.py  perf_test.rs  test_openapi.rs  test_serialize  test_serialize.rs
.cargo/: config.toml
.github/workflows/: ci.yml
.jules/: bolt.md  sentinel.md  vanguard.md
docs/: _config.yml  about.md  features.md  index.md  introduction.md  learn.md  reference.md  release-notes.md  resources.md
example/: Cargo.toml
example/bindings/: ItemCreate.ts  ItemDb.ts  ItemResponse.ts  ListItemsQuery.ts  LoginRequest.ts  TokenResponse.ts
example/examples/: background_tasks_example.rs  middleware_example.rs  test_client_example.rs  upload_example.rs
example/src/: lib.rs  main.rs  models.rs  routes.rs
example/tests/: test_auth.rs  test_client.rs
rustapi/: Cargo.toml  README.md
rustapi-cli/: Cargo.toml  README.md
rustapi-cli/src/: lib.rs  main.rs  new.rs
rustapi-macros/: Cargo.toml  README.md
rustapi-macros/src/: lib.rs
rustapi/src/: auth.rs  background_tasks.rs  connection.rs  dependencies.rs  docs.rs  extract.rs  extractors.rs  lib.rs  lifecycle.rs  middleware.rs  mount.rs  responses.rs  route.rs  routing.rs  static_files.rs  test_client.rs  tower.rs  upload.rs
rustapi/src/routing/: api.rs  middleware.rs  route.rs  router.rs
rustapi/tests/: test_connection.rs
scripts/: check_line_counts.sh
uki/: Cargo.toml  README.md
uki/src/: lib.rs  main.rs  new.rs
ukiapi/: Cargo.toml  README.md
ukiapi-macros/: Cargo.toml  README.md
ukiapi-macros/src/: lib.rs
ukiapi/src/: auth.rs  body.rs  docs.rs  handler.rs  health.rs  lib.rs  mount.rs  projection.rs  response.rs  responses.rs  routing.rs  test_client.rs  upload.rs  ws.rs
ukiapi/src/features/: scoped_di.rs
ukiapi/src/routing/: api.rs  autodiscover.rs  middleware.rs  route.rs  router.rs
ukiapi/tests/: test_connection.rs  test_extractors.rs  test_responses.rs
ukidama/: Cargo.toml  README.md
ukidama-macros/: Cargo.toml  README.md
ukidama-macros/src/: lib.rs
ukidama/src/: background_tasks.rs  dependencies.rs  extractors.rs  http.rs  lib.rs  lifecycle.rs  mount.rs  projection.rs  response.rs  responses.rs  route.rs  routing.rs  server.rs  test_client.rs  utils.rs
ukidama/src/features/: mod.rs  scoped_di.rs
ukidama/src/routing/: api.rs  middleware.rs  route.rs  router.rs
ukidama/tests/: test_connection.rs  test_extractors.rs
