[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
ukidama = { path = "../ukidama" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.20", features = ["derive"] }
schemars = "0.8"

[package.metadata.cargo-machete]
ignored = ["schemars", "serde", "serde_json", "validator"]
