[package]
name = "example"
version = "0.0.1"
edition = "2021"

[dependencies]
ukiapi = { path = "../ukiapi" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = "0.20"
schemars = "0.8"
env_logger = "0.11"

[package.metadata.cargo-machete]
ignored = ["schemars", "serde", "serde_json", "validator"]
