[package]
name = "rustapi"
version = "0.1.0"
edition = "2021"

[dependencies]
rustapi-macros = { path = "../rustapi-macros" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.20", features = ["derive"] }
schemars = "0.8"
tower = "0.5.3"
tower-http = { version = "0.5", features = ["full"] }
futures = "0.3"
