[package]
name = "rustapi"
version = "0.1.0"
edition = "2021"

[dependencies]
rustapi-macros = { path = "../rustapi-macros" }
axum = { version = "0.8", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.20", features = ["derive"] }
schemars = "0.8"
tower = "0.5.3"
tower-http = { version = "0.5", features = ["full"] }
futures = "0.3"
ts-rs = "12.0.1"
jsonwebtoken = "9"
http-body-util = "0.1"
log = "0.4"
env_logger = "0.11"
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2.0"
