[package]
name = "uki"
version = "0.0.1"
edition = "2021"
description = "CLI for UkiApi — run and develop UkiApi projects"

[[bin]]
name = "uki"
path = "src/main.rs"

[[bin]]
name = "uki-new"
path = "src/new.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
serde_json = "1"
