[package]
name = "ukiapi-cli"
version = "0.0.1"
edition = "2021"
description = "CLI for UkiApi — run and develop UkiApi projects"
license = "MIT"
repository = "https://github.com/ukiapi/ukiapi"
homepage = "https://github.com/ukiapi/ukiapi"
keywords = ["cli", "web", "api", "development"]

[[bin]]
name = "ukiapi"
path = "src/main.rs"

[[bin]]
name = "ukiapi-new"
path = "src/new.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
serde_json = "1"
