[package]
name = "ukiapi-macros"
version = "0.0.1"
edition = "2021"
description = "Procedural macros for UkiApi web framework"
license = "MIT"
repository = "https://github.com/ukiapi/ukiapi"
homepage = "https://github.com/ukiapi/ukiapi"
keywords = ["web", "macros", "proc-macros", "api"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
