[package]
name = "ukiapi"
version = "0.0.1"
edition = "2021"
description = "A high-performance Rust web framework inspired by FastAPI"
license = "MIT"
repository = "https://github.com/ukiapi/ukiapi"
homepage = "https://github.com/ukiapi/ukiapi"
readme = "README.md"
keywords = ["web", "api", "framework", "http", "async"]
categories = ["web-programming", "asynchronous"]

[dependencies]
ukiapi-macros = "0.0.1"
axum = { version = "0.8", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.20", features = ["derive"] }
schemars = "0.8"
tower = "0.5.3"
tower-http = { version = "0.5", features = ["full"] }
futures = "0.3"
ts-rs = "12.0.1"
jsonwebtoken = "9"
http-body-util = "0.1"
log = "0.4"
env_logger = "0.11"
tokio-util = { version = "0.7", features = ["io"] }
mime_guess = "2.0"
inventory = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
